# motor

./: .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.devcontainer/ubuntu-22.04/: devcontainer.json
.devcontainer/ubuntu-24.04/: devcontainer.json
.devcontainer/ubuntu-26.04/: devcontainer.json
.workshop/: dev.yaml
.workshop/python-gtk/: sdk.yaml
.workshop/python-gtk/hooks/: setup-base  setup-project
motor/: base_motor.py  elliptec_motor.py  gui.py  gui_widget.py  k10cr2_motor.py  remote_motor.py  remote_server.py  standa_motor.py  thorlabs_motor.py
src/motor/: __init__.py  base_motor.py  dummy_motor.py  elliptec_motor.py  k10cr2_motor.py  remote_motor.py  remote_server.py  standa_motor.py  thorlabs_motor.py
src/motor/gui/: gui.py  gui_widget.py  motor_page.py  motor_select_page.py
tests/: test_yaru.py
